<resources>
    <string name="app_name">Lab5</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="first_name">First name</string>
    <string name="enter_here">Enter</string>
    <string name="second_name">Last name</string>
    <string name="read">Read</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="sort_by">Sort by</string>
    <string-array name="entries">
        <item>First name</item>
        <item>Last name</item>
        <item>Email</item>
    </string-array>
</resources>