<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_y="41dp"
            android:layout_x="21dp"/>

    <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="46dp"
            android:layout_height="22dp"
            android:text="@string/email"
            android:layout_marginTop="58dp"
            android:layout_marginStart="20dp"
            android:layout_y="296dp"
            android:layout_x="31dp"/>

    <EditText
            android:id="@+id/editTextId"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="26dp"
            android:ems="10"
            android:inputType="number"
            android:layout_y="28dp"
            android:layout_x="50dp"/>

    <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/update"
            android:layout_y="25dp"
            android:layout_x="165dp"/>

    <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/delete"
            android:layout_y="25dp"
            android:layout_x="273dp"/>

    <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/first_name"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="40dp"
            android:layout_y="114dp"
            android:layout_x="18dp"/>

    <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/enter_here"
            android:inputType="text"
            android:layout_marginTop="11dp"
            android:layout_y="99dp"
            android:layout_x="113dp"/>

    <TextView
            android:id="@+id/textViewSecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/second_name"
            android:layout_y="174dp"
            android:layout_x="21dp"/>

    <EditText
            android:id="@+id/editTextSecondName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:hint="@string/enter_here"
            android:inputType="text"
            android:layout_y="163dp"
            android:layout_x="114dp"/>

    <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:layout_marginTop="27dp"
            android:layout_marginStart="20dp"
            android:layout_y="235dp"
            android:layout_x="27dp"/>

    <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_here"
            android:inputType="text"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="71dp"
            android:layout_y="224dp"
            android:layout_x="114dp"/>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:contentDescription="TODO"
            android:layout_marginEnd="2dp"
            android:layout_y="354dp"
            android:layout_x="7dp"
            tools:srcCompat="@tools:sample/avatars"/>

    <Button
            android:id="@+id/buttonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_y="366dp"
            android:layout_x="219dp"/>

    <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/clear"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="8dp"
            android:layout_y="366dp"
            android:layout_x="314dp"/>

    <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="8dp"
            android:layout_y="365dp"
            android:layout_x="124dp"/>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="56dp"
            android:layout_y="454dp"
            android:layout_x="11dp"
            android:entries="@array/entries"/>

    <Button
            android:id="@+id/buttonSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="116dp"
            android:text="@string/sort_by"
            android:layout_marginStart="157dp"
            android:layout_marginEnd="158dp"
            android:layout_marginTop="32dp"
            android:layout_y="493dp"
            android:layout_x="30dp"/>

    <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_here"
            android:layout_y="286dp"
            android:layout_x="116dp"/>

</AbsoluteLayout>